--- a/flashcards/assets/style.css
+++ b/flashcards/assets/style.css
@@ -1,6 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cartao{
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid gray;
+    border-radius: 10px;
+}
+
 footer{
     background-color: black;
     color: white;
     position: fixed;
     bottom: 0;
+    width: 100%;
+    padding: 20px;
 }
