--- a/flashcards/assets/style.css
+++ b/flashcards/assets/style.css
@@ -17,4 +17,48 @@ footer{
     bottom: 0;
     width: 100%;
     padding: 20px;
+} 
+
+footer p {
+  text-align:center;
+  font-size: 0.6rem;
+  margin-top:0.5rem;
 }
+
+body {
+  background-color: bisque;
+  font-family: Bai Jamjuree;
+}
+
+#container {
+
+}
+
+#container {
+    display: flex;
+}
+
+.cartao{
+  margin: 1rem 1rem;
+}
+
+<div class="cartao conteudo resposta">
+   <p>O que é JavaScript?</p>
+ </div> 
+ <div class="cartao__conteudo__resposta">
+   <p>O Javascript é uma linguagem de programação</p>
+ </div
+ </div>
+
+ .cartao {
+   margin: 1rem 1rem;
+   background-color: aqua;
+ }
+
+ .cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+ }
+ 
