--- a/flashcards/assets/style.css
+++ b/flashcards/assets/style.css
@@ -26,7 +26,7 @@ footer p {
 }
 
 body {
-  background-color: bisque;
+  background-color: rgb(251, 250, 249);
   font-family: Bai Jamjuree;
 }
 
@@ -57,8 +57,7 @@ body {
 
  .cartao {
     margin: 1rem 1rem;
-    background-color: aqua;
+    background-color: rgb(244, 148, 235);
     height: 20rem;
     flex-grow: 1;
  }
- 
