--- a/flashcards/assets/style.css
+++ b/flashcards/assets/style.css
@@ -60,5 +60,11 @@ body {
  }
 
  .cartao__conteudo__pergunta p {
-   color:var(--text-color);
+   color: var(--text-color);
+   font-weight: 500;
+ }
+
+ .cartao__conteudo__resposta p {
+   color: var(--card-back-color);
+   font-weight: 700;
  }
